--- a/frontend/views/helloworld/hello-world-view.module.css
+++ b/frontend/views/helloworld/hello-world-view.module.css
@@ -1,10 +1,8 @@
-:host {
-    display: block;
-    margin: 0 auto;
-    max-width: 1024px;
+.host {
     padding: 0 var(--lumo-space-l);
 }
-.button-layout {
+
+.buttonlayout {
     margin-bottom: var(--lumo-space-l);
     margin-top: var(--lumo-space-m);
 }
